# MRCDFT

./: .fortls.json  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.txt  Makefile  README.md  launch_ide.sh
GCM/: functions.py  rasgcm4EE.f
GCM/20Ne/: Ne20.sh  compile_gcm.sh
GCM/20Ne/exec/: data  fort.22  fort.23  fort.66  run
GCM/22Ne/: Ne22.ipynb
Labs/40Ca/40Ca_10_2026-06-08-19-34-56/: experiment_note.txt  run.sh
Labs/40Ca/40Ca_10_2026-06-09-09-01-34/: experiment_note.txt
Labs/40Ca/40Ca_10_2026-06-09-09-34-05/: .group_id
Labs/40Ca/40Ca_10_2026-06-09-10-27-05/: experiment_note.txt
Labs/40Ca/40Ca_10_2026-06-09-15-06-16/: experiment_note.txt
Notes/: EXP001.md  EXP002.md  README.md  note_manager.sh
Notes/templates/: comparison.md  default.md
dataprocessing/: elem_file_manager.py  kernel_schema.json  ploter.ipynb  plotpro.ipynb  plotpro2.ipynb  plotpro3.ipynb  r2_schema.json
doc/: Usage.md
doc/installation/: windows_ifx.md
example/40Casacopy2/: run.sh
examples/22Ne/: run.sh
examples/40Ca/: run copy.sh
examples/40Cas/: dataprocess1.py
examples/40Cas copy/: run.sh
examples/40Casa/: MRCDFT_Ca_8.o96597  run.sh
examples/40Casacopy/: MRCDFT_Ca_8.o97439  run.sh
examples/40Casacopy-1/: run.sh
examples/40Casacopy-1-2/: run.sh
examples/40Casacopy-1-3/: run.sh
examples/40Casacopy-1-4/: MRCDFT_Ca_8.o97645  run.sh
examples/40Casacopy-1-6/: MRCDFT_Ca_8.o97648  run.sh
examples/40Casacopy-1-7/: MRCDFT_Ca_8.o97647  run.sh
examples/40Casacopy-1.1/: run.sh
examples/40Casacopy-50/: MRCDFT_Ca_8.o97594  run.sh
examples/40Casacopy2/: MRCDFT_Ca_8.o97540  MRCDFT_Ca_8.o97551  MRCDFT_Ca_8.o97626  MRCDFT_Ca_8.o97627  run.sh
examples/40Casacopy3/: MRCDFT_Ca_8.o97573
examples/40Casamepara/: run.sh
main/: Fortran_LaTeX_Template.ipynb  Fortran_Learning.ipynb  README_experiment_note.txt  main.sh  main.sh.backup.20260608_164812
reports/: 40Casacopy_comparison_report.md
scripts/: calculate_EM_Kerenel_by_TD1Bdensity.ipynb  calculate_eccentricity.ipynb  calculate_kernel_by1Bdensity.ipynb  run.sh
src/: CDFT_basis.f90  CDFT_broyden.f90  CDFT_constraint.f90  CDFT_density.f90  CDFT_dirac_BCS.f90  CDFT_expectation.f90  CDFT_expectation_rotation.f90  CDFT_field.f90  CDFT_force.f90  CDFT_inout.f90  CDFT_main.f90  GCM_HWG.f90  GCM_inout.f90  GCM_main.f90  GCM_observables.f90  Globals.f90  Mathmethods.f90  Proj_Energy.f90  Proj_Jsquare_Nsquare.f90  Proj_angular_momentum.f90  Proj_density.f90  Proj_eccentricity.f90  Proj_inout.f90  Proj_kernel.f90  Proj_main.f90  Proj_mixed.f90  Tools.f90  main.f90
srcnew/: CDFT_RHB_equation.f90  CDFT_dirac_BCS.f90  CDFT_dirac_equation.f90  Constants.f90  GCM_HWG.f90  Mathmethods.f90  Proj_mixed.f90  Tools.f90  main.f90
srcold/: CDFT_RHB_delta_field.f90  CDFT_constraint.f90  CDFT_expectation_rotation.f90  CDFT_nucleus.f90  Constants.f90  GCM_main.f90  Globals.f90  Proj_density.f90  Proj_electromagnetic_multipole.f90  Proj_inout.f90  Proj_main.f90  Proj_mixed.f90  Proj_transition_density.f90  Tools.f90
